# sal-dashboard

./: .gitignore  app.py  pyproject.toml  requirements.txt
data/: database.xlsx  database_bkp.xlsx
data/_ss/: database_bkp.xlsx
utils/: db.py  excel_io.py
